--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,17 @@
         "browser": true,
         "es2021": true
     },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:@prettier/recommended"
+        "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
