--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "editor.fontSize": 12,
   "terminal.integrated.fontSize": 12,
   "editor.renderIndentGuides": true,
+  "editor.renderWhitespace": "all",
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
