--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "graphql-boileplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -49,16 +49,20 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "2.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.2",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.4",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^11.2.3",
     "next-pwa": "^5.2.16",
+    "prettier": "2.4.1",
     "storybook-addon-next-router": "^2.0.4",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4"
-  }
+  },
+  "main": "index.tsx",
+  "repository": "https://github.com/optydeviocourses/graphql-boileplate.git",
+  "author": "optydev <optydev.io.courses@gmail.com>",
+  "license": "MIT"
 }
