--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "mongoose": "^6.0.10",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -51,6 +52,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "graphql-yoga": "^1.18.3",
     "husky": "^7.0.2",
     "jest": "^27.2.5",
     "jest-styled-components": "^7.0.4",
